--- a/store2.html
+++ b/store2.html
@@ -1,8 +1,149 @@
 body {
-    width: 100%;
-    place-items: center;
-    background-color: #f5f5f5;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    color: black;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: white;
+    width: 100%;
+    box-sizing: border-box;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+.user-info {
+    font-size: 16px;
+    text-align: left;
+}
+
+.content-container {
+    display: flex;
+    flex: 1;
+    overflow: hidden;
+    width: 100%;
+}
+
+.sidebar {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid #e0e0e0;
+    background-color: white;
+    transition: width 0.3s ease;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.sidebar.collapsed {
+    width: 70px;
+}
+
+.sidebar.collapsed .tab-link span {
+    display: none;
+}
+
+.sidebar .toggle-btn {
+    padding: 10px;
+    cursor: pointer;
+    text-align: right;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.tab-nav {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    flex-grow: 1;
+}
+
+.tab-link {
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+
+.tab-link i {
+    margin-right: 10px;
+    width: 20px;
+    text-align: center;
+    color: #555;
+}
+
+.tab-link:hover,
+.tab-link.active {
+    background-color: #f0f0f0;
+}
+
+.logout-btn {
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    border-top: 1px solid #e0e0e0;
+    display: block;
+    margin-top: auto;
+}
+
+.logout-btn:hover {
+    background-color: #f0f0f0;
+}
+
+.main-content {
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto;
+    background-color: white;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        position: fixed;
+        height: 100%;
+        z-index: 1000;
+    }
+    .sidebar.collapsed {
+        width: 0;
+        padding: 0;
+    }
+    .main-content {
+        margin-left: 70px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 form {
     width: 96%;
@@ -54,52 +195,24 @@ input, select {
     color: #555;
 }
 
-/* Heading frame layout */
-.header-container {
-    display: flex;
-    justify-content: space-between;
-    width: 95%;
-    margin-top: 1%;
-}
 
-/* INTI logo layout */
-.heading {
-    background: url("../../pic/INTI_LOGO.png") left no-repeat;
-    width: 40%;
-    height: 100px;
-}
 
-/* User Info layout include logout button */
-.user-info {
-    display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    background-color: white;
-    border-radius: 8px;
-    padding: 10px;
-    width: 30%;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
 
-/* User Info layout */
-.user-details {
-    font-weight: normal;
-    font-size: medium;
-    text-align: left;
-    margin-right: 10px;
-    margin-left: 10px;
-    width: 100%;
-}
 
-/* logout button layout */ 
-.logout-btn {
-    width: 45%;
-    padding: 10px;
-    text-align: center;
-    border-radius: 8px;
-    background-color: #ffb8b8;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Main menu container layout (big frame) */
 .menu-container {
